stumpless_include_HEADERS = include/boolean.h \
                            include/configuration.h \
                            include/entry.h \
                            include/event.h \
                            include/formatted_output.h \
                            include/level.h \
                            include/logger.h \
                            include/status.h \
                            include/stream_output.h \
                            include/stumpless.h \
                            include/text_formatter.h \
                            include/type.h \
                            include/value.h \
                            include/value_constructor.h \
                            include/value_list.h
