stumpless_include_HEADERS = include/boolean.h \
                            include/configuration.h \
                            include/entry.h \
                            include/event.h \
                            include/level.h \
                            include/logger.h \
                            include/logger_profile.h \
                            include/output.h \
                            include/output_profile.h \
                            include/raw_logger.h \
                            include/status.h \
                            include/stream_output.h \
                            include/stumpless.h \
                            include/text_formatter.h \
                            include/type.h \
                            include/value.h \
                            include/value_constructor.h \
                            include/value_list.h \
                            include/value_profile.h
