include_HEADERS = include/stumpless.h

stumpless_includedir = $(includedir)/stumpless

stumpless_include_HEADERS = include/boolean.h \
                            include/configuration.h \
                            include/entry.h \
                            include/event.h \
                            include/filter_list.h \
                            include/handler_list.h \
                            include/level.h \
                            include/logger.h \
                            include/output.h \
                            include/output_profile.h \
                            include/status.h \
                            include/stream_handler.h \
                            include/text_formatter.h \
                            include/type.h \
                            include/value.h \
                            include/value_constructor.h \
                            include/value_list.h \
                            include/value_profile.h

include include/private/Makefile.am
